[package]
name = "zquash"
version = "0.1.0"
authors = ["Christian Schwarz <me@cschwarz.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings = { path = "../bindings" }

structopt = "~0.2"
dotenv = "*"
failure = "*"
quicli = "0.4"

serde = "*"
bincode = "*"
itertools = "0.8"
difference = "*"
log = "*"
derive_more = "*"

is_sorted = "~0.1"

nvpair-sys = "0.1"
const-cstr = "0.3"
libc = "*"
